# RohitPawar001-H-M_fashion_recommendation_system

./: README.md  main.py  new.py  pyproject.toml
research/: 01_testing.ipynb
resys/data_source/: h_and_m_data.py  h_and_m_data_fixed.py
