[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h-and-m-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "polars>=1.24.0",
]

[tool.setuptools]
package-dir = {"" = "resys"}
packages = ["data_source"]
